# golf

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  fly.toml
assets/models/: biggus_dickus.gltf  cone.gltf  cube.gltf  lane.gltf  sphere.gltf
src/: collision.rs  main.rs
web/: index.html  restart-audio.js
