[package]
name = "golf"
version = "0.1.0"
edition = "2021"

[profile.web-release]
inherits = "release"
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
lto = "thin"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[dependencies]
bevy = "0.13"
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"] }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.88"
